--- a/TasksProjectsApp/src/app/structure/header/header.component.html
+++ b/TasksProjectsApp/src/app/structure/header/header.component.html
@@ -7,14 +7,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        
+
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['tasks']" [routerLinkActive]="'router-link-active'">Tasks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['projects']" [routerLinkActive]="'router-link-active'">Projects</a>
         </li>
-        
+
         <li class="nav-item">
           <a class="nav-link disabled">Other</a>
         </li>
@@ -26,3 +26,16 @@
     </div>
   </div>
 </nav>
+
+<hr>
+<div class="buttons-container">
+  <button class="show-btn" (click)="showDynamicComponent()">
+    Show component
+  </button>
+  <button class="remove-btn" (click)="removeDynamicComponent()">
+    Remove component
+  </button>
+</div>
+<hr>
+<ng-template #dynamic></ng-template>
+<hr>
