--- a/customer-multimodule-app/src/app/app.component.html
+++ b/customer-multimodule-app/src/app/app.component.html
@@ -5,3 +5,7 @@
 <button routerLink="/orders">Orders</button>
 <button routerLink="">Home</button>
 <router-outlet></router-outlet>
+
+<hr>
+
+<lib-my-lib></lib-my-lib>
