--- a/customer-multimodule-app/src/app/app.component.html
+++ b/customer-multimodule-app/src/app/app.component.html
@@ -5,3 +5,9 @@
 <button routerLink="/orders">Orders</button>
 <button routerLink="">Home</button>
 <router-outlet></router-outlet>
+
+<hr>
+
+<app-customer-list></app-customer-list>
+<hr>
+<app-order-list></app-order-list>
