--- a/ag-grid-demo/src/app/tasks/tasks.component.html
+++ b/ag-grid-demo/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 <div style="width: 100%; height: 500px;">
-    <!-- <ag-grid-angular
+    <ag-grid-angular
         style="width: 100%; height: 100%;"
         class="ag-theme-balham"
         [rowData]="rowData"
@@ -7,6 +7,5 @@
         [defaultColDef]="defaultColDef"
         [pagination]="true"
         [paginationPageSize]="10"
-        
-    ></ag-grid-angular> -->
+    ></ag-grid-angular>
 </div>
