--- a/TasksProjectsApp/src/app/structure/header/header.component.html
+++ b/TasksProjectsApp/src/app/structure/header/header.component.html
@@ -1,10 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="['']">{{app_title}}</a>
+    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
@@ -15,27 +17,21 @@
           <a class="nav-link" [routerLink]="['projects']" [routerLinkActive]="'router-link-active'">Projects</a>
         </li>
 
+
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['dynamic']" [routerLinkActive]="'router-link-active'">Show Dynamic</a>
+        </li>
+        
         <li class="nav-item">
           <a class="nav-link disabled">Other</a>
         </li>
       </ul>
+
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+
     </div>
   </div>
 </nav>
-
-<hr>
-<div class="buttons-container">
-  <button class="show-btn" (click)="showDynamicComponent()">
-    Show component
-  </button>
-  <button class="remove-btn" (click)="removeDynamicComponent()">
-    Remove component
-  </button>
-</div>
-<hr>
-<ng-template #dynamic></ng-template>
-<hr>
