--- a/ag-grid-demo/src/app/app.component.html
+++ b/ag-grid-demo/src/app/app.component.html
@@ -2,5 +2,6 @@
   <h1>
       Welcome to AG Grid Demo!
   </h1>
+  <button mat-button color="primary">Primary</button>
 </div>
 <app-tasks></app-tasks>
