--- a/TasksProjectsApp/src/app/structure/header/header.component.html
+++ b/TasksProjectsApp/src/app/structure/header/header.component.html
@@ -19,6 +19,10 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['observables']" [routerLinkActive]="'router-link-active'">Observables</a>
+        </li>
+        
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['dynamic']" [routerLinkActive]="'router-link-active'">Show Dynamic</a>
         </li>
         
