--- a/BananaGrid/src/app/main/main.component.html
+++ b/BananaGrid/src/app/main/main.component.html
@@ -1,11 +1,13 @@
-<div class="buttons-container">
-    <button class="show-btn" (click)="showOrders()">
-        Show Orders
-    </button>
-</div>
+<section class="main">
+    <div class="buttons-container">
+        <button class="show-btn" (click)="showOrders()">
+            Show Orders
+        </button>
+    </div>
 
-<div>
-    <banana-tabs>
-        A possible body
-    </banana-tabs>
-</div>
+    <div>
+        <banana-tabs>
+            A possible body...
+        </banana-tabs>
+    </div>
+</section>
