--- a/BananaLibs/projects/tabslib/src/lib/tabslib.component.html
+++ b/BananaLibs/projects/tabslib/src/lib/tabslib.component.html
@@ -1,6 +1,8 @@
-<h2>Tab Lib Component</h2>
-<pre>{{codes|json}}</pre>
-<ng-template #dynamic></ng-template>
-<hr>
-<ng-content></ng-content>
-<hr>
+<section class="tabs">
+    <h2>Tab Lib Component</h2>
+    <pre>{{codes|json}}</pre>
+    <ng-template #dynamicTab></ng-template>
+    <hr>
+    <ng-content></ng-content>
+    <hr>
+</section>
