--- a/BananaGrid/src/app/modules/orders/order-list/order-list.component.html
+++ b/BananaGrid/src/app/modules/orders/order-list/order-list.component.html
@@ -1,14 +1,14 @@
-<h2>Orders</h2>
-<ul>
-    <li *ngFor="let anOrder of orders">{{anOrder|json}}</li>
-</ul>
+<article class="orders">
+    <h2>Orders</h2>
 
-<ag-grid-angular
-        style="width: 100%; height: 100%;"
+    <ag-grid-angular
+        style="width: 100%; height: 50vh;"
         class="ag-theme-balham"
         [rowData]="rowData"
         [columnDefs]="columnDefs"
         [defaultColDef]="defaultColDef"
         [pagination]="true"
-        [paginationPageSize]="3"
+        [paginationPageSize]="10"
     ></ag-grid-angular>
+
+</article>
