--- a/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
+++ b/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
@@ -1,7 +1,7 @@
 <section>
     <h2>Tasks</h2>
     <br>
-    <input class="form-control" [(ngModel)]="filter_text" placeholder="Text to filter tasks">
+    <input class="form-control" [ngModel]="filter_text()" (ngModelChange)="filter_text.set($event)" placeholder="Text to filter tasks">
     <hr>
     <table class="table table-striped">
         <thead class="table-dark">
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody>
-            @for(aTask of getFilteredTasks(); track aTask.id){
+            @for(aTask of filteredTasks(); track aTask.id){
             <tr>
                 <td>{{aTask.id}}</td>
                 <td>{{aTask.description}}</td>
