--- a/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
+++ b/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
@@ -1,7 +1,7 @@
 <section>
     <h2>Tasks</h2>
     <br>
-    <input class="form-control" [ngModel]="filter_text()" (ngModelChange)="filter_text.set($event)" placeholder="Text to filter tasks">
+    <input *appDelay="2"  class="form-control" [ngModel]="filter_text()" (ngModelChange)="filter_text.set($event)" placeholder="Text to filter tasks">
     <hr>
     <table class="table table-striped">
         <thead class="table-dark">
@@ -14,10 +14,10 @@
             </tr>
         </thead>
         <tbody>
-            @for(aTask of filteredTasks(); track aTask.id){
+            @for(aTask of taskList()|filterElements:'description':filter_text(); track aTask.id){
             <tr>
                 <td>{{aTask.id}}</td>
-                <td>{{aTask.description}}</td>
+                <td [appFormatFrame]="'yellow'">{{aTask.description}}</td>
                 <td>{{aTask.time}}</td>
                 <td>{{aTask.project}}</td>
                 <td>
