--- a/products-app/src/app/products/detail-products/detail-products.component.html
+++ b/products-app/src/app/products/detail-products/detail-products.component.html
@@ -1,7 +1,6 @@
-<h3>Detalle del producto: {{pid}}</h3>
-@if(product){
+<h3>Detalle del producto: {{pidS()}}</h3>
 <pre>
-    {{product|json}}
+    {{productS()|json}}
 </pre>
 <hr>
 <section>
@@ -14,7 +13,3 @@
 <div>
     <a [routerLink]="['/products/4']">Saltar al 4</a>
 </div>
-}
-@if(!product){
-<div>No existe</div>
-}
