--- a/TasksProjectsApp/src/app/app.component.html
+++ b/TasksProjectsApp/src/app/app.component.html
@@ -1,6 +1,4 @@
 <main class="main container">
   <app-header></app-header>
-  <app-task-list></app-task-list>
-  <hr>
-  <app-project-list></app-project-list>
+  <router-outlet></router-outlet>
 </main>
