--- a/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
+++ b/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
@@ -1,7 +1,8 @@
 <section>
     <h2>Tasks</h2>
     <br>
-    <input *appDelay="2"  class="form-control" [ngModel]="filter_text()" (ngModelChange)="filter_text.set($event)" placeholder="Text to filter tasks">
+    <input *appDelay="2" class="form-control" [ngModel]="filter_text()" (ngModelChange)="filter_text.set($event)"
+        placeholder="Text to filter tasks">
     <hr>
     <table class="table table-striped">
         <thead class="table-dark">
@@ -11,10 +12,11 @@
                 <th>time</th>
                 <th>project</th>
                 <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
-            @for(aTask of taskList()|filterElements:'description':filter_text(); track aTask.id){
+            @for(aTask of taksService.tasks()|filterElements:'description':filter_text(); track aTask.id){
             <tr>
                 <td>{{aTask.id}}</td>
                 <td appFormatFrame>{{aTask.description}}</td>
@@ -23,6 +25,8 @@
                 <td>
                     <app-delete [tid]="aTask.id" (delete_clicked)="deleteTask($event)"></app-delete>
                 </td>
+                <td><a [routerLink]="['/tasks/',aTask.id]" routerLinkActive="router-link-active"><i
+                            class="bi bi-eye"></i></a></td>
             </tr>}@empty{
             <tr>
                 <td>No tasks...</td>
