--- a/TasksProjectsApp/src/app/structure/header/header.component.html
+++ b/TasksProjectsApp/src/app/structure/header/header.component.html
@@ -9,11 +9,13 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                    <a class="nav-link">Tasks</a>
+                    <a class="nav-link" [routerLink]="['tasks']" routerLinkActive="router-link-active">Tasks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" >Projects</a>
+                    <a class="nav-link" [routerLink]="['projects']"
+                        [routerLinkActive]="'router-link-active'">Projects</a>
                 </li>
+
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
