--- a/products-app/src/app/user/new-user/new-user.component.html
+++ b/products-app/src/app/user/new-user/new-user.component.html
@@ -1,10 +1,10 @@
 <section>
     <h2>Signup form</h2>
-    <form>
+    <form [formGroup]="myform">
         <fieldset formGroupName="name">
             <div class="form-group">
                 <label>Name</label>
-                <input type="text" class="form-control" required>
+                <input [formControl]="firstName" type="text" class="form-control" required>
             </div>
 
             <div class="form-group">
