--- a/products-app/src/app/user/new-user/new-user.component.html
+++ b/products-app/src/app/user/new-user/new-user.component.html
@@ -1,31 +1,35 @@
 <section>
     <h2>Signup form</h2>
-    <form [formGroup]="myform">
+    <form novalidate [formGroup]="myform">
         <fieldset formGroupName="name">
             <div class="form-group">
                 <label>Name</label>
-                <input [formControl]="firstName" type="text" class="form-control" required>
+                <input formControlName="firstName" type="text" class="form-control" required>
             </div>
 
             <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" class="form-control" required>
+                <input formControlName="lastName" type="text" class="form-control" required>
             </div>
+
+            @if(!myform.get('name')?.valid){<div>
+                El nombre y apellido son requeridos y deben tener más de 3 caracters
+            </div>}
         </fieldset>
 
         <div class="form-group">
             <label>Email</label>
-            <input type="email" class="form-control" required>
+            <input formControlName="email"  type="email" class="form-control" required>
         </div>
 
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" required>
+            <input formControlName="password"  type="password" class="form-control" required>
         </div>
 
         <div class="form-group">
             <label>Language</label>
-            <select class="form-control">
+            <select formControlName="language" class="form-control">
                 <option value="" disabled selected>Please select a language</option>
                 <option value="es">es</option>
                 <option value="en">en</option>
@@ -38,3 +42,17 @@
         
     </form>
 </section>
+
+<hr>
+<h4>Name</h4>
+<pre>{{myform.get('name')?.value|json}}</pre>
+<pre>{{myform.get('name')?.status}}</pre>
+<pre>{{myform.get('name')?.valid}}</pre>
+<pre>{{myform.get('name')?.pristine}}</pre>
+<pre>{{myform.get('name')?.dirty}}</pre>
+<pre>{{myform.get('name')?.touched}}</pre>
+
+<h4>myForm</h4>
+<pre>{{myform?.value|json}}</pre>
+<pre>{{myform?.status}}</pre>
+<pre>{{myform?.errors}}</pre>
