--- a/products-app/src/app/user/new-user/new-user.component.html
+++ b/products-app/src/app/user/new-user/new-user.component.html
@@ -72,29 +72,29 @@
         <fieldset>
             <div class="form-group">
                 <label>Name</label>
-                <input [(ngModel)]="model.name" name="firstName" type="text" class="form-control" required minlength="3"
+                <input [(ngModel)]="signupModel.name" name="firstName" type="text" class="form-control" required minlength="3"
                     maxlength="20">
             </div>
 
             <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" [(ngModel)]="model.surname" name="lastName" class="form-control" required>
+                <input type="text" [(ngModel)]="signupModel.surname" name="lastName" class="form-control" required>
             </div>
         </fieldset>
 
         <div class="form-group">
             <label>Email</label>
-            <input type="email" [(ngModel)]="model.email" name="email" class="form-control" required appEmailvalidator>
+            <input type="email" [(ngModel)]="signupModel.email" name="email" class="form-control" required appEmailvalidator>
         </div>
 
         <div class="form-group">
             <label>Password</label>
-            <input type="password" [(ngModel)]="model.password" name="password" class="form-control" required>
+            <input type="password" [(ngModel)]="signupModel.password" name="password" class="form-control" required>
         </div>
 
         <div class="form-group">
             <label>Language</label>
-            <select class="form-control" [(ngModel)]="model.language" name="language" required>
+            <select class="form-control" [(ngModel)]="signupModel.language" name="language" required>
                 <option value="" disabled selected>Please select a language</option>
                 <option value="es">es</option>
                 <option value="en">en</option>
@@ -108,7 +108,7 @@
     </form>
 </section>
 
-<pre>{{model|json}}</pre>
+<pre>{{signupModel|json}}</pre>
 
 <pre>{{newUserForm?.value|json}}</pre>
 <pre>{{newUserForm?.status|json}}</pre>
