--- a/TasksProjectsApp/src/app/tasks/new-task/new-task.component.html
+++ b/TasksProjectsApp/src/app/tasks/new-task/new-task.component.html
@@ -1,24 +1,24 @@
 <section>
     <h2>New Task</h2>
-    <form>
+    <form #nTaskForm="ngForm" (ngSubmit)="onSubmitTask()">
         <div class="form-group">
             <label>Description</label>
-            <input type="text" min="3" max="20" name="description" class="form-control" required>
+            <input type="text" [(ngModel)]="newTask.description" min="3" max="20" name="description"  class="form-control" required>
         </div>
 
         <div class="form-group">
             <label>Time</label>
-            <input type="number" name="time" min="1" class="form-control" required>
+            <input type="number"  [(ngModel)]="newTask.time" name="time" min="1" class="form-control" required>
         </div>
 
         <div class="form-group">
             <label>Project</label>
-            <input type="number" name="project" min="1" class="form-control" required>
+            <input type="number"   [(ngModel)]="newTask.project" name="project" min="1" class="form-control" required>
         </div>
 
         <br>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!nTaskForm.valid">Submit</button>
         </div>
     </form>
 </section>
