--- a/products-app/src/app/user/new-user/new-user.component.html
+++ b/products-app/src/app/user/new-user/new-user.component.html
@@ -59,9 +59,9 @@
 <pre>{{myform.get('language')?.errors|json}}</pre>
 
 <h4>myForm</h4>
-<pre>{{myform?.value|json}}</pre>
-<pre>{{myform?.status}}</pre>
-<pre>{{myform?.errors}}</pre>
+<pre>{{myform.value|json}}</pre>
+<pre>{{myform.status}}</pre>
+<pre>{{myform.errors}}</pre>
 
 <hr>
 <hr>
