--- a/customer-multimodule-app/src/app/app.component.html
+++ b/customer-multimodule-app/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>
   {{title}}
 </h1>
+<h2 i18n="site claim|A multimodule app@@appClaim">A multimodule app</h2>
 <button routerLink="/customers">Customers</button>
 <button routerLink="/orders">Orders</button>
 <button routerLink="">Home</button>
