--- a/resources/forms/new-user/new-user.component.html
+++ b/resources/forms/new-user/new-user.component.html
@@ -1,7 +1,7 @@
 <section>
     <h2>Signup form</h2>
     <form>
-        <fieldset >
+        <fieldset formGroupName="name">
             <div class="form-group">
                 <label>Name</label>
                 <input type="text" class="form-control" required>
