--- a/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
+++ b/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
@@ -17,6 +17,7 @@
                 <th>project</th>
                 <th></th>
                 <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -31,6 +32,7 @@
                 </td>
                 <td><a [routerLink]="['/tasks/',aTask.id]" routerLinkActive="router-link-active"><i
                             class="bi bi-eye"></i></a></td>
+                <td><span (click)="showPreview()">preview</span></td>
             </tr>}@empty{
             <tr>
                 <td>No tasks...</td>
