--- a/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
+++ b/TasksProjectsApp/src/app/tasks/task-list/task-list.component.html
@@ -32,7 +32,7 @@
                 </td>
                 <td><a [routerLink]="['/tasks/',aTask.id]" routerLinkActive="router-link-active"><i
                             class="bi bi-eye"></i></a></td>
-                <td><span (click)="showPreview()">preview</span></td>
+                <td><preview-task [tarea]="aTask"></preview-task></td>
             </tr>}@empty{
             <tr>
                 <td>No tasks...</td>
