--- a/TasksProjectsApp/src/app/structure/header/header.component.html
+++ b/TasksProjectsApp/src/app/structure/header/header.component.html
@@ -12,8 +12,11 @@
                     <a class="nav-link" [routerLink]="['tasks']" routerLinkActive="router-link-active">Tasks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['projects']"
-                        [routerLinkActive]="'router-link-active'">Projects</a>
+                    <a class="nav-link" [routerLink]="['projects']" [routerLinkActive]="'router-link-active'">Projects</a>
+                </li>
+                
+                <li class="nav-item" *appFeatureFlags="'new-feature'">
+                    <a class="nav-link" [routerLink]="['newfeature']" [routerLinkActive]="'router-link-active'">New feature</a>
                 </li>
 
             </ul>
