--- a/customer-app/src/app/app.component.html
+++ b/customer-app/src/app/app.component.html
@@ -4,6 +4,7 @@
 <button routerLink="/customers">Customers</button>
 <button routerLink="/orders">Orders</button>
 <button routerLink="">Home</button>
-
-
-<router-outlet />
+<hr>
+<app-shared></app-shared>
+<hr>
+<router-outlet /> 
